--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
             <a href="index.html"><img src="img/logoquest.png" alt="The Quest Logo"></a>
         </div>
         <div class="language-switch">
-            <i class="icon">▼</i> <!-- Иконка стрелки -->
+            <img src="img/arrow-icon.svg" class="arrow-icon"></img> <!-- Иконка стрелки -->
             <span>English</span>
             <img src="img/language-icon.svg" class="icon"> <!-- Иконка глобуса -->
+            <ul class="language-menu">
+                <li data-lang="en">English</li>
+                <li data-lang="ru">Русский</li>
+                <li data-lang="es">Español</li>
+                <li data-lang="fr">Français</li>
+            </ul>
         </div>
+        
     </header>
     
     <main>
